--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       This is your sandbox for testing GitHub flow. Make a change and push it
       up!
     </p>
+    <p>This is an example</p>
     <script src="js/script.js"></script>
   </body>
 </html>
