made a second change to index and script files for demo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       up!
     </p>
     <p>This is an example</p>
+    <p>This is a second change</p>
     <script src="js/script.js"></script>
   </body>
 </html>
