changing index and script for testing branching

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </p>
     <p>This is an example</p>
     <p>This is a second change</p>
+    <p>This is a third change in a branch</p>
     <script src="js/script.js"></script>
   </body>
 </html>
